--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Raccacoonie
+favicon: /favicon.png
 description: A recipe reviewer trained on 83,782 unique recipes &amp; their 234,429 reviews scraped from food.com
 theme: jekyll-theme-slate
